# ufmt-i32-print-repro

./: Cargo.toml  avr-atmega328p.json  output.txt
src/: main.rs
