[package]
name = "project1"
version = "0.1.0"
authors = ["Collin Reilly Clark <crclark96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# panic handler
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
debug = true
codegen-units = 1
